--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
     <header>
         <h1 class="titulo">Angel Chi Meza <span>Freelancer</span></h1>
     </header>
-    <nav>
-        <a href="#">Inicioo</a>
-        <a href="#">Nosotros</a>
-        <a href="#">Clientes</a>
-        <a href="#">Contacto</a>
-    </nav>
+    <div class="nav-bg">
+        <nav class="navegacion-principal contenedor">
+            <a href="#">Inicio</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </div>
 
     
 
     <section>
-        <h2> Diseño y Desarrollo Web Freelancer</h2>
+        <h2 class="titulo"> Diseño y Desarrollo Web Freelancer</h2>
         
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFC107" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
